welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:7: error: Invalid literal number
	if ( ab==10*(ac) || ab==10*5bc) {
                                   ^blueTicket:10: error: illegal start of simple expression
}
^