welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = {
	if (ab==10 || ac==10 || bc==10) {
		return 10
		
	}

	if ( ab==10*(ac) || ab==10*5bc) {
		return 5
	}
}
